<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/avatar"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/Style_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/name"
        android:textAlignment="center" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Done_button" />

    <EditText
        android:id="@+id/nickNameEditText"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/what_is_yout_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/nickNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/NameStyle"/>

    <ImageView
        android:id="@+id/imageViewBigStar"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding">

        <TextView
            android:id="@+id/Bio"
            android:fontFamily="@font/roboto"
            android:text="@string/bio"
            style="@style/NameStyle" />


    </ScrollView>

</LinearLayout>